poprawiony LF sekw

--- a/src_sekw/CMakeLists.txt
+++ b/src_sekw/CMakeLists.txt
@@ -7,3 +7,4 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g3")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ")
 
 add_executable(Main main.cpp template_cpu.h)
+add_executable(Main2 main_moze_lepsze.cpp template_cpu.h)
